# BoARIO-Tools

./: README.md  flood-mrio-mapping.py  pyproject.toml  representative_events.py  representative_events_test.py  utils.py  va_df_building.py
agg_files/: README.md
boario_tools/: __init__.py  boario-tools.conf  config.py  floods.py  mriot.py  regex_patterns.py  utils.py
boario_tools/data/aggregation_files/: 10_sectors_common_aggreg_wip.ods  regions_EU_aggreg.ods  regions_common_aggreg.ods  sectors_common_aggreg.ods
boario_tools/data/aggregation_files/exiobase3_ixi/: exiobase3_ixi_21_sectors.csv  exiobase3_ixi_74_sectors.csv  exiobase3_ixi_to_other_mrio_sectors.ods
boario_tools/floods/: funcs.py
boario_tools/scripts/: flood_mrio_mapping.py  representative_events.py  representative_events_bis.py  representative_events_test.py  va_df_building.py
boario_tools/tests/: test_mriot.py  test_utils.py
