[tool.poetry]
name = "boario-tools"
version = "0.1.0"
description = ""
authors = ["Samuel Juhel <samuel.juhel@zaclys.net>"]
readme = "README.md"
packages = [{include = "boario_tools"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.3"
geopandas = "^0.12.2"
pyarrow = "^11.0.0"
pymrio = "^0.4.8"
scikit-learn = "^1.2.2"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
