[tool.poetry]
name = "boario-tools"
version = "0.2.1"
description = ""
authors = ["Samuel Juhel <samuel.juhel@zaclys.net>"]
readme = "README.md"
packages = [{include = "boario_tools"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1"
geopandas = "^0.14"
pyarrow = ">=11"
pymrio = "^0.5"
scikit-learn = "^1"


[tool.poetry.group.dev.dependencies]
black = "^23.3"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"